# wb-rust-L0

./: .env  Cargo.toml  README.md  log4rs.yaml  test.sh
src/: database.rs  error.rs  main.rs  model.rs
